overflow fix

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -165,7 +165,7 @@ header{
   height: 505px;
   bottom: 0;
   width: 100%;
-  overflow-y: hidden;
+  //overflow-y: hidden;
     .orbit_form{
       margin-top: 505px!important;
       width: 100%;
@@ -1276,11 +1276,6 @@ span.ui-icon.ui-icon-circle-triangle-w{
   color: #069!important;
 }
 
-@media screen{
-  body.is-reveal-open{
-    overflow: hidden;
-  }
-}
 @media screen and (max-width: 980px){
   .menu{
     li{
